TODO: Maybe tracing down communication errors which seem to appear from time to time (but dont have any effect because they get autocorrected within ~12ms.)
TODO: Testing, testing ..

V RF.01.41.09.Mod alpha (2018-03-15) 
- making the Z-Offset-Scan faster.
- small fix for M3913 / M3914 abort.

V RF.01.41.08.Mod alpha (2018-03-15) 
- abort M3913 / M3914 (when moving) by ok-Button and back-Button
- commented all g_uStartOfIdle to find bugs -> adjusted some idle-times for better usability
- some more tweaks around checks if zCMP is blocked
- removed matrix-version check within calculateZScrewCorrection. the reason for this was an overflow we already corrected months ago.
- checked all uid.lock / unlocks
- cleaned up uid. object references within the UIDisplay itself. (but it didn't change rom size)

V RF.01.41.07.Mod alpha (2018-03-14) 
- Support for REPETIER_PROTOCOL:3
- MoveZ now releases Z correctly. Printer::stepperDirection[Z_AXIS] = 0; (It was possible that the printer hung with the wrong combination of moveZ directions + waitUntilEndOfAllMoves)
- Stability: Commands::waitUntilEndOfAllMoves() now checks if zCMP is blocked by stepper direction and ignores wait in that case.
- cleanup of HomeY und HomeX
- ENDSTOP_X_RETEST_REDUCTION_FACTOR is not used at homeY anymore. -> ENDSTOP_Y_RETEST_REDUCTION_FACTOR instead.
- tuned Z_ENDSTOP_MAX_HYSTERESIS to 0.35f
- The rule that the bed tunes down by zCMP if homed and matrix>0 is bad if you want to scan anything. -> REMOVED!
- Preheat PLA/ABS does not block status line in display anymore.

V RF.01.41.06.Mod alpha (2018-03-13) 
- more testing on serial -> Fletcher error correction really seems to work flawless.
- re-/implemented some debugging gode for serial errors
- fixed formats in GCode::printCommand()
- fixed sending Com::tWrongChecksum when using parseBinary (I once forgot newline)
- we temporarily set Z_ENDSTOP_MAX_HYSTERESIS 0.5f for mhiers tests

V RF.01.41.05.Mod alpha (2018-03-12) 