@@ -1141,6 +1141,7 @@ public:
     static uint8_t setDestinationStepsFromGCode(GCode *com);
     static uint8_t setDestinationStepsFromMenu( float relativeX, float relativeY, float relativeZ );
     static void moveToReal(float x,float y,float z,float e,float feedrate);
+    static void homeDigits();
     static void homeAxis(bool xaxis,bool yaxis,bool zaxis); /// Home axis
     static void setOrigin(float xOff,float yOff,float zOff);
 
